annotations.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    tier: frontend
    team: blue
  annotations:
    myapp.io/checksum-value: 2131e00da0sd0sad0sa2130213dsavasd210
spec:
  containers:
    - name: nginx
      image: nginx:1.23.4
