first-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
spec:
  containers:
    - name: nginx
      image: nginx:1.23.4
    - name: tomcat
      image: tomcat:9.0-jdk17-corretto
