labels.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    tier: frontend
    team: blue
spec:
  containers:
    - name: nginx
      image: nginx:1.23.4

---

apiVersion: v1
kind: Pod
metadata:
  name: app1
  labels:
    tier: backend
    team: green
spec:
  containers:
    - name: app
      image: app:1.0.0

---

apiVersion: v1
kind: Pod
metadata:
  name: app2
  labels:
    tier: backend
    team: yellow
spec:
  containers:
    - name: app
      image: app:1.0.0
