namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: production

---

apiVersion: v1
kind: Pod
metadata:
  name: nginx
  namespace: production
spec:
  containers:
    - name: nginx
      image: nginx:1.23.4
