pods-communication.yaml
apiVersion: v1
kind: Pod
metadata:
  name: app
spec:
  containers:
    - name: app
      image: app:1.0.0
      ports:
        - containerPort: 5000

---

apiVersion: v1
kind: Pod
metadata:
  name: toolbox
spec:
  containers:
    - name: toolbox
      image: pnowy/toolbox:1.0.0
      command: ['sh', '-c', 'echo "Hello kubernetes!" && sleep infinity']
