volumes.yaml
apiVersion: v1
kind: Pod
metadata:
  name: toolbox
spec:
  volumes:
    - name: data
      hostPath:
        path: /data
        type: DirectoryOrCreate
  containers:
    - name: toolbox
      image: pnowy/toolbox:1.0.0
      workingDir: "/app"
      command: ['sh', '-c']
      args:
        - mkdir -p /app && sleep infinity
      volumeMounts:
        - mountPath: /app
          name: data
