external-name-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
spec:
  type: ExternalName
  externalName: httpbin.org

---

apiVersion: v1
kind: Pod
metadata:
  name: toolbox
spec:
  containers:
    - name: toolbox
      image: pnowy/toolbox:1.0.0
      command: ['sh', '-c', 'echo "Hello kubernetes!" && sleep infinity']
