secrets.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
spec:
  type: ClusterIP
  selector:
    app: app-pod
  ports:
      - port: 8080
        protocol: TCP
        targetPort: http

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  labels:
    name: app-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-pod
  template:
    metadata:
      labels:
        app: app-pod
    spec:
      containers:
        - name: app
          image: app:1.0.0
          ports:
            - containerPort: 5000
              name: http
