services-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
spec:
  type: ClusterIP
  selector:
    app: app-pod
  ports:
    - protocol: TCP
      port: 8080
      targetPort: http

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
  labels:
    app: deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app-pod
  template:
    metadata:
      labels:
        app: app-pod
    spec:
      containers:
        - name: app
          image: app:1.0.0
          ports:
            - containerPort: 5000
              name: http

---

apiVersion: v1
kind: Pod
metadata:
  name: toolbox
spec:
  containers:
    - name: toolbox
      image: pnowy/toolbox:1.0.0
      command: ['sh', '-c', 'echo "Hello kubernetes!" && sleep infinity']
