ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - foo.bar.com
        - bar.foo.com
    - secretName: ingress-tls
  rules:
    - host: foo.bar.com
      http:
        paths:
           - pathType: Prefix
             path: .
             backend:
              service:
                name: frontend
                port:
                  number: 3000
    - host: bar.foo.com
      http:
        - paths:
            - path: /api
              pathType: Prefix
              backend:
                service:
                  name: backend
                  port:
                    number: 8080
